Fix styling on mobile

--- a/main.css
+++ b/main.css
@@ -64,9 +64,38 @@ select::-ms-expand {
   width: 180px;
 }
 
-@media screen and (min-width:0\0) {
+@media (max-width: 1000px) {
+
+  h1 {
+    margin-top: -30px;
+  }
+
+  input {
+    color: #000;
+  }
+
+  #isWeighted {
+    margin-left:calc(50% - 100px);
+    width: 200px;
+  }
+
+  #calcGPA {
+    width: 160px;
+  }
+
+  div {
+    font-size: 10px;
+  }
+
   select {
-    background:none\9;
-    padding: 5px\9;
+    width: 125px;
+    color: #000;
+    margin: 10px 5px 10px 10px;
+  }
+}
+
+@media (max-width: 500px) {
+  div {
+    font-size: 16px;
   }
 }
